--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mobx-react": "^9.2.0",
     "mobx-react-lite": "^4.1.0",
     "react": "^18.3.1",
+    "react-code-input": "^3.10.1",
     "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-full-page": "^0.1.12",
